// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graph store protocol graph.doGet should retrieve named graphs 1`] = `
Object {
  "@context": Object {
    "@vocab": "http://example.org/issues#",
    "dc": "http://purl.org/dc/elements/1.1/",
    "ex": "http://example.org/vehicles/",
    "foaf": "http://xmlns.com/foaf/0.1/",
    "owl": "http://www.w3.org/2002/07/owl#",
    "paths": "urn:paths:",
    "rdf": "http://www.w3.org/1999/02/22-rdf-syntax-ns#",
    "rdfs": "http://www.w3.org/2000/01/rdf-schema#",
    "so": "https://schema.org/",
    "stardog": "tag:stardog:api:",
    "xsd": "http://www.w3.org/2001/XMLSchema#",
  },
  "@graph": Array [
    Object {
      "@graph": Array [
        Object {
          "@id": "_:b",
          "@type": "http://example.org/namedgraphs#Person",
          "foaf:lastname": Object {
            "@value": "Burgers",
          },
          "foaf:mbox": Object {
            "@id": "mailto:bob@oldcorp.example.org",
          },
          "foaf:name": Object {
            "@value": "Bob",
          },
        },
      ],
      "@id": "http://example.org/namedgraphs#bob",
    },
  ],
}
`;

exports[`graph store protocol graph.doGet should retrieve the default graph when no graph is specified 1`] = `
Object {
  "@context": Object {
    "@vocab": "http://example.org/issues#",
    "dc": "http://purl.org/dc/elements/1.1/",
    "ex": "http://example.org/vehicles/",
    "foaf": "http://xmlns.com/foaf/0.1/",
    "owl": "http://www.w3.org/2002/07/owl#",
    "paths": "urn:paths:",
    "rdf": "http://www.w3.org/1999/02/22-rdf-syntax-ns#",
    "rdfs": "http://www.w3.org/2000/01/rdf-schema#",
    "so": "https://schema.org/",
    "stardog": "tag:stardog:api:",
    "xsd": "http://www.w3.org/2001/XMLSchema#",
  },
  "@graph": Array [
    Object {
      "@id": "http://example.org/namedgraphs#bob",
      "dc:publisher": Object {
        "@value": "Bob",
      },
    },
    Object {
      "@id": "http://example.org/namedgraphs#alice",
      "dc:publisher": Object {
        "@value": "Alice",
      },
    },
    Object {
      "@id": "http://localhost/publications/articles/Journal1/1940/Article1",
      "@type": "http://localhost/vocabulary/bench/Article",
      "dc:creator": Object {
        "@id": "http://localhost/persons/Paul_Erdoes",
      },
      "dc:title": Object {
        "@value": "richer dwelling scrapped",
      },
      "foaf:homepage": Object {
        "@value": "http://www.succories.tld/scrapped/prat.html",
      },
      "http://localhost/vocabulary/bench/abstract": Object {
        "@value": "unmuzzling measles decentralizing hogfishes gantleted richer succories dwelling scrapped prat islanded burlily thanklessly swiveled polers oinked apnea maxillary dumpers bering evasiveness toto teashop reaccepts gunneries exorcises pirog desexes summable heliocentricity excretions recelebrating dually plateauing reoccupations embossers cerebrum gloves mohairs admiralties bewigged playgoers cheques batting waspishly stilbestrol villainousness miscalling firefanged skeins equalled sandwiching bewitchment cheaters riffled kerneling napoleons rifer splinting surmisers satisfying undamped sharpers forbearer anesthetization undermentioned outflanking funnyman commuted lachrymation floweret arcadian acridities unrealistic substituting surges preheats loggias reconciliating photocatalyst lenity tautological jambing sodality outcrop slipcases phenylketonuria grunts venturers valiantly unremorsefully extradites stollens ponderers conditione loathly cancels debiting parrots paraguayans resonates",
      },
      "http://localhost/vocabulary/bench/cdrom": Object {
        "@value": "http://www.hogfishes.tld/richer/succories.html",
      },
      "http://swrc.ontoware.org/ontology#journal": Object {
        "@id": "http://localhost/publications/journals/Journal1/1940",
      },
      "http://swrc.ontoware.org/ontology#month": Object {
        "@value": 4,
      },
      "http://swrc.ontoware.org/ontology#note": Object {
        "@value": "overbites terminals giros podgy vagus kinkiest xix recollected",
      },
      "http://swrc.ontoware.org/ontology#pages": Object {
        "@value": 110,
      },
      "rdfs:seeAlso": Object {
        "@value": "http://www.gantleted.tld/succories/dwelling.html",
      },
    },
    Object {
      "@id": "http://localhost/persons/Paul_Erdoes",
      "@type": "foaf:Person",
      "foaf:firstName": Object {
        "@value": "Paul",
      },
      "foaf:lastName": Object {
        "@value": "Erdoes",
      },
    },
    Object {
      "@id": "http://localhost/publications/articles/Journal1/1940/Article2",
      "@type": "http://localhost/vocabulary/bench/Article",
      "dc:creator": Object {
        "@id": "http://localhost/persons/John_Erdoes",
      },
      "dc:title": Object {
        "@value": "richer dwelling scrapped",
      },
      "foaf:homepage": Object {
        "@value": "http://www.succories.tld/scrapped/prat2.html",
      },
      "http://localhost/vocabulary/bench/abstract": Object {
        "@value": "unmuzzling measles decentralizing hogfishes gantleted richer succories dwelling scrapped prat islanded burlily thanklessly swiveled polers oinked apnea maxillary dumpers bering evasiveness toto teashop reaccepts gunneries exorcises pirog desexes summable heliocentricity excretions recelebrating dually plateauing reoccupations embossers cerebrum gloves mohairs admiralties bewigged playgoers cheques batting waspishly stilbestrol villainousness miscalling firefanged skeins equalled sandwiching bewitchment cheaters riffled kerneling napoleons rifer splinting surmisers satisfying undamped sharpers forbearer anesthetization undermentioned outflanking funnyman commuted lachrymation floweret arcadian acridities unrealistic substituting surges preheats loggias reconciliating photocatalyst lenity tautological jambing sodality outcrop slipcases phenylketonuria grunts venturers valiantly unremorsefully extradites stollens ponderers conditione loathly cancels debiting parrots paraguayans resonates",
      },
      "http://localhost/vocabulary/bench/cdrom": Object {
        "@value": "http://www.hogfishes.tld/richer/succories.html",
      },
      "http://swrc.ontoware.org/ontology#journal": Object {
        "@id": "http://localhost/publications/journals/Journal1/1940",
      },
      "http://swrc.ontoware.org/ontology#month": Object {
        "@value": 8,
      },
      "http://swrc.ontoware.org/ontology#note": Object {
        "@value": "overbites terminals giros podgy vagus kinkiest xix recollected",
      },
      "http://swrc.ontoware.org/ontology#pages": Object {
        "@value": 240,
      },
      "rdfs:seeAlso": Object {
        "@value": "http://www.gantleted.tld/succories/dwelling.html",
      },
    },
    Object {
      "@id": "http://localhost/persons/John_Erdoes",
      "@type": "foaf:Person",
      "foaf:firstName": Object {
        "@value": "John",
      },
      "foaf:lastName": Object {
        "@value": "Erdoes",
      },
    },
    Object {
      "@id": "http://localhost/publications/articles/Journal1/1940/Article3",
      "@type": "http://localhost/vocabulary/bench/Article",
      "dc:creator": Object {
        "@id": "http://localhost/persons/John_Perez",
      },
      "dc:title": Object {
        "@value": "richer dwelling scrapped 2",
      },
      "foaf:homepage": Object {
        "@value": "http://www.succories.tld/scrapped/prat2.html",
      },
      "http://localhost/vocabulary/bench/abstract": Object {
        "@value": "unmuzzling measles decentralizing hogfishes gantleted richer succories dwelling scrapped prat islanded burlily thanklessly swiveled polers oinked apnea maxillary dumpers bering evasiveness toto teashop reaccepts gunneries exorcises pirog desexes summable heliocentricity excretions recelebrating dually plateauing reoccupations embossers cerebrum gloves mohairs admiralties bewigged playgoers cheques batting waspishly stilbestrol villainousness miscalling firefanged skeins equalled sandwiching bewitchment cheaters riffled kerneling napoleons rifer splinting surmisers satisfying undamped sharpers forbearer anesthetization undermentioned outflanking funnyman commuted lachrymation floweret arcadian acridities unrealistic substituting surges preheats loggias reconciliating photocatalyst lenity tautological jambing sodality outcrop slipcases phenylketonuria grunts venturers valiantly unremorsefully extradites stollens ponderers conditione loathly cancels debiting parrots paraguayans resonates",
      },
      "http://localhost/vocabulary/bench/cdrom": Object {
        "@value": "http://www.hogfishes.tld/richer/succories.html",
      },
      "http://swrc.ontoware.org/ontology#journal": Object {
        "@id": "http://localhost/publications/journals/Journal1/1940",
      },
      "http://swrc.ontoware.org/ontology#month": Object {
        "@value": 12,
      },
      "http://swrc.ontoware.org/ontology#note": Object {
        "@value": "overbites terminals giros podgy vagus kinkiest xix recollected",
      },
      "http://swrc.ontoware.org/ontology#pages": Object {
        "@value": 840,
      },
      "rdfs:seeAlso": Object {
        "@value": "http://www.gantleted.tld/succories/dwelling.html",
      },
    },
    Object {
      "@id": "http://localhost/persons/John_Perez",
      "@type": "foaf:Person",
      "foaf:firstName": Object {
        "@value": "John",
      },
      "foaf:lastName": Object {
        "@value": "Perez",
      },
    },
    Object {
      "@id": "http://myvehicledata.com/FordFiesta",
      "@type": "ex:Car",
    },
    Object {
      "@id": "ex:Car",
      "rdfs:subClassOf": Object {
        "@id": "ex:Vehicle",
      },
    },
    Object {
      "@id": "http://myvehicledata.com/AudiA8",
      "@type": "ex:Car",
    },
    Object {
      "@id": "http://myvehicledata.com/FerrariEnzo",
      "@type": "ex:SportsCar",
    },
    Object {
      "@id": "ex:SportsCar",
      "rdfs:subClassOf": Object {
        "@id": "ex:Car",
      },
    },
    Object {
      "@id": "ex:Vehicle",
      "@type": "rdfs:Class",
    },
    Object {
      "@id": "issue7",
      "@type": Array [
        "Issue",
        "SecurityIssue",
      ],
      "related": Array [
        Object {
          "@id": "issue2",
        },
        Object {
          "@id": "issue3",
        },
        Object {
          "@id": "issue4",
        },
      ],
      "reportedBy": Array [
        Object {
          "@id": "user6",
        },
        Object {
          "@id": "user2",
        },
      ],
      "reportedOn": Object {
        "@type": "xsd:dateTime",
        "@value": "2012-12-31T23:57:00Z",
      },
      "reproducedBy": Array [
        Object {
          "@id": "user1",
        },
        Object {
          "@id": "user2",
        },
      ],
      "reproducedOn": Object {
        "@type": "xsd:dateTime",
        "@value": "2012-10-31T23:57:00Z",
      },
      "state": Object {
        "@id": "unassigned",
      },
    },
    Object {
      "@id": "Issue",
      "@type": "owl:Class",
    },
    Object {
      "@id": "SecurityIssue",
      "@type": "owl:Class",
      "rdfs:subClassOf": Object {
        "@id": "Issue",
      },
    },
    Object {
      "@id": "state",
      "@type": "owl:ObjectProperty",
    },
    Object {
      "@id": "unassigned",
      "@type": "ValidState",
    },
    Object {
      "@id": "reportedBy",
      "@type": "owl:ObjectProperty",
    },
    Object {
      "@id": "user6",
      "@type": "foaf:Agent",
      "foaf:givenName": Object {
        "@value": "Bob",
      },
      "foaf:mbox": Object {
        "@id": "mailto:alice@example.com",
      },
      "foaf:phone": Object {
        "@id": "tel:+.555.222.2222",
      },
    },
    Object {
      "@id": "user2",
      "@type": "foaf:Person",
      "foaf:familyName": Object {
        "@value": "Smith",
      },
      "foaf:givenName": Object {
        "@value": "Alice",
      },
      "foaf:mbox": Object {
        "@id": "mailto:alice@example.com",
      },
      "foaf:phone": Object {
        "@id": "tel:+1.555.222.2222",
      },
    },
    Object {
      "@id": "reportedOn",
      "@type": "owl:DatatypeProperty",
    },
    Object {
      "@id": "reproducedBy",
      "@type": "owl:ObjectProperty",
    },
    Object {
      "@id": "reproducedOn",
      "@type": "owl:DatatypeProperty",
    },
    Object {
      "@id": "related",
      "@type": "owl:ObjectProperty",
    },
    Object {
      "@id": "issue4",
      "reportedOn": Object {
        "@type": "xsd:dateTime",
        "@value": "2012-12-31T23:57:00Z",
      },
      "state": Object {
        "@id": "unsinged",
      },
    },
    Object {
      "@id": "assigned",
      "@type": "ValidState",
    },
    Object {
      "@id": "paths:Alice",
      "paths:knows": Object {
        "@id": "paths:Bob",
      },
    },
    Object {
      "@id": "paths:Bob",
      "paths:knows": Object {
        "@id": "paths:David",
      },
      "paths:worksWith": Object {
        "@id": "paths:Charlie",
      },
    },
    Object {
      "@id": "paths:Charlie",
      "paths:parentOf": Object {
        "@id": "paths:Eve",
      },
    },
    Object {
      "@id": "paths:Eve",
      "paths:knows": Object {
        "@id": "paths:David",
      },
    },
    Object {
      "@id": "paths:Thing1",
      "paths:dependsOn": Array [
        Object {
          "@id": "paths:Thing3",
        },
        Object {
          "@id": "paths:Thing2",
        },
      ],
    },
    Object {
      "@id": "paths:Thing2",
      "paths:dependsOn": Array [
        Object {
          "@id": "paths:Thing3",
        },
        Object {
          "@id": "paths:Thing1",
        },
      ],
    },
    Object {
      "@id": "paths:Thing3",
      "paths:dependsOn": Array [
        Object {
          "@id": "paths:Thing1",
        },
        Object {
          "@id": "paths:Thing2",
        },
      ],
    },
  ],
}
`;

exports[`graph store protocol graph.doGet should retrieve the default graph when no graph is specified 2`] = `
Object {
  "@context": Object {
    "@vocab": "http://example.org/issues#",
    "dc": "http://purl.org/dc/elements/1.1/",
    "ex": "http://example.org/vehicles/",
    "foaf": "http://xmlns.com/foaf/0.1/",
    "owl": "http://www.w3.org/2002/07/owl#",
    "paths": "urn:paths:",
    "rdf": "http://www.w3.org/1999/02/22-rdf-syntax-ns#",
    "rdfs": "http://www.w3.org/2000/01/rdf-schema#",
    "so": "https://schema.org/",
    "stardog": "tag:stardog:api:",
    "xsd": "http://www.w3.org/2001/XMLSchema#",
  },
  "@graph": Array [
    Object {
      "@id": "http://example.org/namedgraphs#bob",
      "dc:publisher": Object {
        "@value": "Bob",
      },
    },
    Object {
      "@id": "http://example.org/namedgraphs#alice",
      "dc:publisher": Object {
        "@value": "Alice",
      },
    },
    Object {
      "@id": "http://localhost/publications/articles/Journal1/1940/Article1",
      "@type": "http://localhost/vocabulary/bench/Article",
      "dc:creator": Object {
        "@id": "http://localhost/persons/Paul_Erdoes",
      },
      "dc:title": Object {
        "@value": "richer dwelling scrapped",
      },
      "foaf:homepage": Object {
        "@value": "http://www.succories.tld/scrapped/prat.html",
      },
      "http://localhost/vocabulary/bench/abstract": Object {
        "@value": "unmuzzling measles decentralizing hogfishes gantleted richer succories dwelling scrapped prat islanded burlily thanklessly swiveled polers oinked apnea maxillary dumpers bering evasiveness toto teashop reaccepts gunneries exorcises pirog desexes summable heliocentricity excretions recelebrating dually plateauing reoccupations embossers cerebrum gloves mohairs admiralties bewigged playgoers cheques batting waspishly stilbestrol villainousness miscalling firefanged skeins equalled sandwiching bewitchment cheaters riffled kerneling napoleons rifer splinting surmisers satisfying undamped sharpers forbearer anesthetization undermentioned outflanking funnyman commuted lachrymation floweret arcadian acridities unrealistic substituting surges preheats loggias reconciliating photocatalyst lenity tautological jambing sodality outcrop slipcases phenylketonuria grunts venturers valiantly unremorsefully extradites stollens ponderers conditione loathly cancels debiting parrots paraguayans resonates",
      },
      "http://localhost/vocabulary/bench/cdrom": Object {
        "@value": "http://www.hogfishes.tld/richer/succories.html",
      },
      "http://swrc.ontoware.org/ontology#journal": Object {
        "@id": "http://localhost/publications/journals/Journal1/1940",
      },
      "http://swrc.ontoware.org/ontology#month": Object {
        "@value": 4,
      },
      "http://swrc.ontoware.org/ontology#note": Object {
        "@value": "overbites terminals giros podgy vagus kinkiest xix recollected",
      },
      "http://swrc.ontoware.org/ontology#pages": Object {
        "@value": 110,
      },
      "rdfs:seeAlso": Object {
        "@value": "http://www.gantleted.tld/succories/dwelling.html",
      },
    },
    Object {
      "@id": "http://localhost/persons/Paul_Erdoes",
      "@type": "foaf:Person",
      "foaf:firstName": Object {
        "@value": "Paul",
      },
      "foaf:lastName": Object {
        "@value": "Erdoes",
      },
    },
    Object {
      "@id": "http://localhost/publications/articles/Journal1/1940/Article2",
      "@type": "http://localhost/vocabulary/bench/Article",
      "dc:creator": Object {
        "@id": "http://localhost/persons/John_Erdoes",
      },
      "dc:title": Object {
        "@value": "richer dwelling scrapped",
      },
      "foaf:homepage": Object {
        "@value": "http://www.succories.tld/scrapped/prat2.html",
      },
      "http://localhost/vocabulary/bench/abstract": Object {
        "@value": "unmuzzling measles decentralizing hogfishes gantleted richer succories dwelling scrapped prat islanded burlily thanklessly swiveled polers oinked apnea maxillary dumpers bering evasiveness toto teashop reaccepts gunneries exorcises pirog desexes summable heliocentricity excretions recelebrating dually plateauing reoccupations embossers cerebrum gloves mohairs admiralties bewigged playgoers cheques batting waspishly stilbestrol villainousness miscalling firefanged skeins equalled sandwiching bewitchment cheaters riffled kerneling napoleons rifer splinting surmisers satisfying undamped sharpers forbearer anesthetization undermentioned outflanking funnyman commuted lachrymation floweret arcadian acridities unrealistic substituting surges preheats loggias reconciliating photocatalyst lenity tautological jambing sodality outcrop slipcases phenylketonuria grunts venturers valiantly unremorsefully extradites stollens ponderers conditione loathly cancels debiting parrots paraguayans resonates",
      },
      "http://localhost/vocabulary/bench/cdrom": Object {
        "@value": "http://www.hogfishes.tld/richer/succories.html",
      },
      "http://swrc.ontoware.org/ontology#journal": Object {
        "@id": "http://localhost/publications/journals/Journal1/1940",
      },
      "http://swrc.ontoware.org/ontology#month": Object {
        "@value": 8,
      },
      "http://swrc.ontoware.org/ontology#note": Object {
        "@value": "overbites terminals giros podgy vagus kinkiest xix recollected",
      },
      "http://swrc.ontoware.org/ontology#pages": Object {
        "@value": 240,
      },
      "rdfs:seeAlso": Object {
        "@value": "http://www.gantleted.tld/succories/dwelling.html",
      },
    },
    Object {
      "@id": "http://localhost/persons/John_Erdoes",
      "@type": "foaf:Person",
      "foaf:firstName": Object {
        "@value": "John",
      },
      "foaf:lastName": Object {
        "@value": "Erdoes",
      },
    },
    Object {
      "@id": "http://localhost/publications/articles/Journal1/1940/Article3",
      "@type": "http://localhost/vocabulary/bench/Article",
      "dc:creator": Object {
        "@id": "http://localhost/persons/John_Perez",
      },
      "dc:title": Object {
        "@value": "richer dwelling scrapped 2",
      },
      "foaf:homepage": Object {
        "@value": "http://www.succories.tld/scrapped/prat2.html",
      },
      "http://localhost/vocabulary/bench/abstract": Object {
        "@value": "unmuzzling measles decentralizing hogfishes gantleted richer succories dwelling scrapped prat islanded burlily thanklessly swiveled polers oinked apnea maxillary dumpers bering evasiveness toto teashop reaccepts gunneries exorcises pirog desexes summable heliocentricity excretions recelebrating dually plateauing reoccupations embossers cerebrum gloves mohairs admiralties bewigged playgoers cheques batting waspishly stilbestrol villainousness miscalling firefanged skeins equalled sandwiching bewitchment cheaters riffled kerneling napoleons rifer splinting surmisers satisfying undamped sharpers forbearer anesthetization undermentioned outflanking funnyman commuted lachrymation floweret arcadian acridities unrealistic substituting surges preheats loggias reconciliating photocatalyst lenity tautological jambing sodality outcrop slipcases phenylketonuria grunts venturers valiantly unremorsefully extradites stollens ponderers conditione loathly cancels debiting parrots paraguayans resonates",
      },
      "http://localhost/vocabulary/bench/cdrom": Object {
        "@value": "http://www.hogfishes.tld/richer/succories.html",
      },
      "http://swrc.ontoware.org/ontology#journal": Object {
        "@id": "http://localhost/publications/journals/Journal1/1940",
      },
      "http://swrc.ontoware.org/ontology#month": Object {
        "@value": 12,
      },
      "http://swrc.ontoware.org/ontology#note": Object {
        "@value": "overbites terminals giros podgy vagus kinkiest xix recollected",
      },
      "http://swrc.ontoware.org/ontology#pages": Object {
        "@value": 840,
      },
      "rdfs:seeAlso": Object {
        "@value": "http://www.gantleted.tld/succories/dwelling.html",
      },
    },
    Object {
      "@id": "http://localhost/persons/John_Perez",
      "@type": "foaf:Person",
      "foaf:firstName": Object {
        "@value": "John",
      },
      "foaf:lastName": Object {
        "@value": "Perez",
      },
    },
    Object {
      "@id": "http://myvehicledata.com/FordFiesta",
      "@type": "ex:Car",
    },
    Object {
      "@id": "ex:Car",
      "rdfs:subClassOf": Object {
        "@id": "ex:Vehicle",
      },
    },
    Object {
      "@id": "http://myvehicledata.com/AudiA8",
      "@type": "ex:Car",
    },
    Object {
      "@id": "http://myvehicledata.com/FerrariEnzo",
      "@type": "ex:SportsCar",
    },
    Object {
      "@id": "ex:SportsCar",
      "rdfs:subClassOf": Object {
        "@id": "ex:Car",
      },
    },
    Object {
      "@id": "ex:Vehicle",
      "@type": "rdfs:Class",
    },
    Object {
      "@id": "issue7",
      "@type": Array [
        "Issue",
        "SecurityIssue",
      ],
      "related": Array [
        Object {
          "@id": "issue2",
        },
        Object {
          "@id": "issue3",
        },
        Object {
          "@id": "issue4",
        },
      ],
      "reportedBy": Array [
        Object {
          "@id": "user6",
        },
        Object {
          "@id": "user2",
        },
      ],
      "reportedOn": Object {
        "@type": "xsd:dateTime",
        "@value": "2012-12-31T23:57:00Z",
      },
      "reproducedBy": Array [
        Object {
          "@id": "user1",
        },
        Object {
          "@id": "user2",
        },
      ],
      "reproducedOn": Object {
        "@type": "xsd:dateTime",
        "@value": "2012-10-31T23:57:00Z",
      },
      "state": Object {
        "@id": "unassigned",
      },
    },
    Object {
      "@id": "Issue",
      "@type": "owl:Class",
    },
    Object {
      "@id": "SecurityIssue",
      "@type": "owl:Class",
      "rdfs:subClassOf": Object {
        "@id": "Issue",
      },
    },
    Object {
      "@id": "state",
      "@type": "owl:ObjectProperty",
    },
    Object {
      "@id": "unassigned",
      "@type": "ValidState",
    },
    Object {
      "@id": "reportedBy",
      "@type": "owl:ObjectProperty",
    },
    Object {
      "@id": "user6",
      "@type": "foaf:Agent",
      "foaf:givenName": Object {
        "@value": "Bob",
      },
      "foaf:mbox": Object {
        "@id": "mailto:alice@example.com",
      },
      "foaf:phone": Object {
        "@id": "tel:+.555.222.2222",
      },
    },
    Object {
      "@id": "user2",
      "@type": "foaf:Person",
      "foaf:familyName": Object {
        "@value": "Smith",
      },
      "foaf:givenName": Object {
        "@value": "Alice",
      },
      "foaf:mbox": Object {
        "@id": "mailto:alice@example.com",
      },
      "foaf:phone": Object {
        "@id": "tel:+1.555.222.2222",
      },
    },
    Object {
      "@id": "reportedOn",
      "@type": "owl:DatatypeProperty",
    },
    Object {
      "@id": "reproducedBy",
      "@type": "owl:ObjectProperty",
    },
    Object {
      "@id": "reproducedOn",
      "@type": "owl:DatatypeProperty",
    },
    Object {
      "@id": "related",
      "@type": "owl:ObjectProperty",
    },
    Object {
      "@id": "issue4",
      "reportedOn": Object {
        "@type": "xsd:dateTime",
        "@value": "2012-12-31T23:57:00Z",
      },
      "state": Object {
        "@id": "unsinged",
      },
    },
    Object {
      "@id": "assigned",
      "@type": "ValidState",
    },
    Object {
      "@id": "paths:Alice",
      "paths:knows": Object {
        "@id": "paths:Bob",
      },
    },
    Object {
      "@id": "paths:Bob",
      "paths:knows": Object {
        "@id": "paths:David",
      },
      "paths:worksWith": Object {
        "@id": "paths:Charlie",
      },
    },
    Object {
      "@id": "paths:Charlie",
      "paths:parentOf": Object {
        "@id": "paths:Eve",
      },
    },
    Object {
      "@id": "paths:Eve",
      "paths:knows": Object {
        "@id": "paths:David",
      },
    },
    Object {
      "@id": "paths:Thing1",
      "paths:dependsOn": Array [
        Object {
          "@id": "paths:Thing3",
        },
        Object {
          "@id": "paths:Thing2",
        },
      ],
    },
    Object {
      "@id": "paths:Thing2",
      "paths:dependsOn": Array [
        Object {
          "@id": "paths:Thing3",
        },
        Object {
          "@id": "paths:Thing1",
        },
      ],
    },
    Object {
      "@id": "paths:Thing3",
      "paths:dependsOn": Array [
        Object {
          "@id": "paths:Thing1",
        },
        Object {
          "@id": "paths:Thing2",
        },
      ],
    },
  ],
}
`;

exports[`graph store protocol graph.doPost should merge into an existing graph 1`] = `
Object {
  "@context": Object {
    "@vocab": "http://example.org/issues#",
    "dc": "http://purl.org/dc/elements/1.1/",
    "ex": "http://example.org/vehicles/",
    "foaf": "http://xmlns.com/foaf/0.1/",
    "owl": "http://www.w3.org/2002/07/owl#",
    "paths": "urn:paths:",
    "rdf": "http://www.w3.org/1999/02/22-rdf-syntax-ns#",
    "rdfs": "http://www.w3.org/2000/01/rdf-schema#",
    "so": "https://schema.org/",
    "stardog": "tag:stardog:api:",
    "xsd": "http://www.w3.org/2001/XMLSchema#",
  },
  "@graph": Array [
    Object {
      "@graph": Array [
        Object {
          "@id": "_:b",
          "@type": "http://example.org/namedgraphs#Person",
          "foaf:lastname": Object {
            "@value": "Burgers",
          },
          "foaf:mbox": Array [
            Object {
              "@id": "mailto:bob@oldcorp.example.org",
            },
            Object {
              "@id": "mailto:bob@newcorp.example.org",
            },
          ],
          "foaf:name": Object {
            "@value": "Bob",
          },
        },
      ],
      "@id": "http://example.org/namedgraphs#bob",
    },
  ],
}
`;

exports[`graph store protocol graph.doPut should overwrite an existing graph 1`] = `
Object {
  "@context": Object {
    "@vocab": "http://example.org/issues#",
    "dc": "http://purl.org/dc/elements/1.1/",
    "ex": "http://example.org/vehicles/",
    "foaf": "http://xmlns.com/foaf/0.1/",
    "owl": "http://www.w3.org/2002/07/owl#",
    "paths": "urn:paths:",
    "rdf": "http://www.w3.org/1999/02/22-rdf-syntax-ns#",
    "rdfs": "http://www.w3.org/2000/01/rdf-schema#",
    "so": "https://schema.org/",
    "stardog": "tag:stardog:api:",
    "xsd": "http://www.w3.org/2001/XMLSchema#",
  },
  "@graph": Array [
    Object {
      "@graph": Array [
        Object {
          "@id": "_:b",
          "foaf:mbox": Object {
            "@id": "mailto:alice@work.newexample.org",
          },
        },
      ],
      "@id": "http://example.org/namedgraphs#alice",
    },
  ],
}
`;
